# learn-rust-by-examples

./: README.md
0.other/handle_error/: hadle  hadle.rs
1 Hello World/1.1 基本语法/: hello
1.hello_world/1.2.format_print/: format  format.rs
10 模块/10.1 模块概况/: mode  mode.rs
10 模块/10.3 文件分层/: another_mod  another_mod.rs
10 模块/10.3 文件分层/one_mod/: inner_mod.rs
10.modle/10.2.super_and_self/: super_and_self  super_and_self.rs
11 crate/: crate.rs  libtest_lib.rlib
11.crate/: crate  test_lib.rs
12 cargo/: Cargo.toml
12.argo/src/: main.rs
13 属性/: attribute  attribute.rs
13.attribute/: attribute.rs
14 泛型/14.1 泛型概述/: generic  generic.rs
14.generics/14.2.trait/: trait  trait.rs
14.generics/14.3.bounds/: bound  bound.rs
14.generics/14.4.new_type/: new_type  new_type.rs
15.scrope/15.1.RALL/: rall  rall.rs
15.scrope/15.2.move/: move.rs
2.primitive/: primitiveType  primitiveType.rs
3 自定义类型/3.1 结构体/: customizedType  customizedType.rs
3 自定义类型/3.2 枚举体/: enumeration  enumeration.rs
3.custom_type/3.1.structure/: customizedType  customizedType.rs
4 变量绑定/: bind  bind.rs
5 类型系统/: type.rs
5.Types/: type  type.rs
6 类型转换/: change  change.rs
7.expression/: expression  expression.rs
8.flow_control/8.1.general_flow_control/: process_control  process_control.rs
8.flow_control/8.2.match_and_if_let/: match  match.rs
9 函数/9.1 一般函数/: fn
9 函数/9.2 闭包（变量的捕获）/: closure  closure.rs
9 函数/9.3 std 中的闭包例子/: std  std.rs
9 函数/9.4 函数高级用法/: hof
9.functions/9.1.functions/: fn.rs
9.functions/9.4.higher_order_function/: hof.rs
(+2 files in other folders)
